# OnlineBoard

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.kk  HomeForm.ui.qml  OnlineBoard_zh_CN.ts  drawinghelpers.js  main.cpp  main.qml  painteditem.cpp  painteditem.h  qml.qrc  qtquickcontrols2.conf  resources.qrc
assets/marks/: marks.ai
cmake/components/: obc-base.cmake  obc-ui-qml.cmake  obc-ui.cmake
doc/: OnlineBoard.xmind
doc/devlopment/: 引入外部服务记录.md
qml/: ColorSquare.qml  flickresize.qml
src/: PaintingBoard.cpp  PaintingBoard.hpp  main.cpp  painteditem.cpp  painteditem.h  roomservice.cpp  roomservice.hpp
src/core/: BackendSync.cpp  BackendSync.hpp
src/ui/qml/: ColorPicker.qml  PainterBoard.qml  PainterItem.qml  PainterTest.qml  PaintingBoard.qml  RoomIndex.qml  index.qml  main.qml  qml.qrc
src/utils/: OBCHelpers.cpp  OBCHelpers.hpp  PureJson.hpp
translations/: OnlineBoard_zh_CN.ts
